# JamomaPureData

./: .gitmodules  .travis.yml  CMakeLists.txt  JamomaPuredata bug report  PureAudioGraph.cpp  PureAudioGraph.h  README.md  build-RPi.sh  build-RPi2.sh  index.html  params.json
Jamoma/: .gitignore
Jamoma/abstractions/: MinuitInterface.pd  j.minuit_device.pd
Jamoma/examples/01-i-score_remote/: 01-i-score_remote.pd
Jamoma/examples/01_i-score_remote/: 01_i-score_remote.pd  test.score
Jamoma/examples/02-simple_oscillator/: oscillator-test.pd  oscillator.model.pd  oscillator.view.pd
Jamoma/examples/03-websocket/: getdir.pd_linux
Jamoma/examples/03_websocket/: 03_websocket.pd
Jamoma/examples/04-pd_remote/: 04-pd_remote-model.pd  04-pd_remote-view.pd
Jamoma/examples/05-max_remote/: 05-max_remote.pd  max.maxpat
Jamoma/help/: j.minuit_device-help.pd  j.parameter-help.pd  j.remote-help.pd
Jamoma/helps/: j.cue-help.pd  j.in-help.pd  j.init-help.pd  j.loader-help.pd  j.map-help.pd  j.message-help.pd  j.message_array-help.pd  j.model-help.pd  j.namespace-help.pd  j.note-help.pd  j.out-help.pd  j.parameter_array-help.pd  j.receive-help.pd  j.remote-help.pd  j.return-help.pd  j.return_array-help.pd  j.score-help.pd  j.send-help.pd  j.ui-help.pd  j.view-hep.pd
Shared/CMake/: JamomaConfiguration.cmake  JamomaPlatformSpecific.cmake  JamomaUtilFunctions.cmake  PdExternalCommon.cmake
Shared/CMake/modules/: FindPd.cmake
Shared/CMake/toolchains/: arm-linux-gnueabihf.cmake  mingw-64.cmake  mingw-w64.cmake  rpi2.cmake
content/download/nightly-builds/: JamomaPd-Linuxia64.tgz  index.html
help/: j.model-help.pd
script/: build-mingw-w64.sh  build.sh  depinstall-linux.sh  depinstall-linux.sudo.sh  depinstall.sh  deploy-git.sh  deploy-thor.sh  id_rsa.enc  travis-ci_build_coverity_scan.sh
source/: CMakeLists.txt  commonsyms.cpp  commonsyms.h  j.loader.cpp  j.parameter.cpp
source/classwrapper/: TTClassWrapperPd.cpp  TTClassWrapperPd.h  TTModularClassWrapperPd.cpp  TTModularClassWrapperPd.h
source/j.cue/: CMakeLists.txt  j.cue.cpp
source/j.in/: CMakeLists.txt  j.in.cpp
source/j.init/: CMakeLists.txt  j.init.cpp
source/j.loader/: CMakeLists.txt  j.loader.cpp
source/j.map/: CMakeLists.txt  j.map.cpp
source/j.message/: CMakeLists.txt
source/j.message_array/: CMakeLists.txt
source/j.model/: CMakeLists.txt  TTModelInfo.cpp  TTModelInfo.h  j.model.cpp  j.model.h  j.model_preset.cpp  j.model_signal.cpp
source/j.modular/: CMakeLists.txt  j.modular.cpp
source/j.namespace/: CMakeLists.txt  j.namespace.cpp
source/j.node/: CMakeLists.txt  j.node.cpp
source/j.out/: CMakeLists.txt  j.out.cpp
source/j.parameter/: CMakeLists.txt  j.parameter.cpp
source/j.parameter_array/: CMakeLists.txt  j.parameter_array.cpp
source/j.receive/: CMakeLists.txt  j.receive.cpp
source/j.remote/: CMakeLists.txt  j.remote.cpp
source/j.return/: CMakeLists.txt
source/j.return_array/: CMakeLists.txt
source/j.score/: CMakeLists.txt  README.md  j.score.cpp
source/j.send/: CMakeLists.txt  j.send.cpp
source/j.ui/: CMakeLists.txt  TTUiInfo.cpp  TTUiInfo.h  j.ui.cpp  j.ui.h  j.ui.internals.cpp  j.ui.presets.cpp
source/j.view/: CMakeLists.txt
ttlimiter~/: ttlimiter~.cpp
ttlimiter~/ttlimiter~.xcodeproj/: project.pbxproj
ttlimiter~/ttlimiter~.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ttlimiter~/ttlimiter~.xcodeproj/project.xcworkspace/xcuserdata/tim.xcuserdatad/: UserInterfaceState.xcuserstate
ttlimiter~/ttlimiter~.xcodeproj/xcuserdata/tim.xcuserdatad/xcschemes/: ttlimiter~.xcscheme  xcschememanagement.plist
